Mon Nov 29 05:54:22 2010  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (native_cond_*): Check return code.
	  (Some OSs except Linux return error code).

Sat Nov 27 19:12:10 2010  Tanaka Akira  <akr@fsij.org>

	* time.c: parenthesize macro arguments.

Sat Nov 27 18:08:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (leap_year_v_p): fixed typo.  [ruby-dev:42631]

Fri Nov 26 09:48:45 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* re.c (rb_reg_initialize_str): should succeed the taint status from
	  the origin. [ruby-core:33338]

Tue Nov 23 18:54:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): should mark self in conrol
	  frames.  [ruby-core:33289]

Sat Oct 30 00:35:13 2010  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_s_compile): fix optional argument.
	  a patch from Yutaka HARA [ruby-core:32953] [Ruby 1.9-Bug#4001]

Mon Nov 22 21:30:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): fix for ascii-compatible external
	  encoding and different encoding string.  [ruby-core:33283]

Mon Nov 22 18:33:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): append for each chars instead of bulk
	  copy if encoding conversion is needed.  [ruby-core:33283]

Mon Nov 22 11:58:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_concat): set ENC_CODERANGE_VALID when the
	  receiver is 7BIT and the argument is non ASCII.

Sat Nov 20 01:57:55 2010  Akio Tajima  <artonx@yahoo.co.jp>

	* common.mk: add dependency(insns.inc) to compile.obj

Thu Nov 18 00:02:17 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding with ASCII content 
	  as needed.  [ruby-core:33229]

Tue Nov 17 08:54:04 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding as needed.  [ruby-core:33135]

Tue Nov 17 08:54:04 2010  James Edward Gray II  <jeg2@ruby-lang.org>
