@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 110
+#define RUBY_PATCHLEVEL 111
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 12
-#define RUBY_RELEASE_DAY 20
-#define RUBY_RELEASE_DATE "2010-12-20"
+#define RUBY_RELEASE_DAY 23
+#define RUBY_RELEASE_DATE "2010-12-23"
 
 #include "ruby/version.h"
 
